--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "readline-sync": "^1.4.10",
     "rimraf": "^2.6.2",
     "shelljs": "^0.7.8",
+    "simple-git": "^2.43.0",
     "xks-git": "0.0.11"
   },
   "devDependencies": {
