--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "chalk": "^2.4.2",
-    "commander": "^8.0.0",
+    "commander": "8.3.0",
     "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
     "readline-sync": "^1.4.10",
