--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "reset": "npm run build && git add . && git commit -m reset &&npm run publish:patch",
     "start": "npm run build:watch",
-    "build": "npm run clean && babel src -d lib",
-    "build:watch": "babel src --watch -d lib",
+    "build": "npm run clean && tsc -p tsconfig.json",
     "clean": "rimraf lib",
     "publish:patch": "npm version patch && npm publish",
     "publish:minor": "npm version minor && npm publish",
@@ -21,33 +20,24 @@
   "author": "kunsam",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "chalk": "^2.4.2",
     "commander": "8.3.0",
-    "fs-extra": "^4.0.2",
-    "lodash": "^4.17.4",
-    "readline-sync": "^1.4.10",
-    "rimraf": "^2.6.2",
+    "lodash": "4.17.21",
+    "readline-sync": "1.4.10",
     "shelljs": "^0.7.8",
     "simple-git": "^2.43.0",
     "xks-git": "0.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-require-ignore": "^0.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "@types/chalk": "^2.2.0",
+    "@types/commander": "^2.12.2",
+    "@types/node": "^17.0.8",
+    "@types/readline-sync": "^1.4.4",
+    "@types/shelljs": "^0.8.10",
+    "rimraf": "^2.6.2",
+    "typescript": "4.5.4"
   },
   "bin": {
-    "XKS": "bin/core.js",
-    "XKS-check-core": "bin/core-check-core.js",
-    "XKS-ccr": "bin/core-check-core.js",
-    "XKS-check-assist-center": "bin/core-check-assist-center.js",
-    "XKS-cac": "bin/core-check-assist-center.js"
+    "XKS": "bin/core.js"
   }
 }
