--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/readline-sync": "^1.4.4",
     "@types/shelljs": "^0.8.10",
     "rimraf": "^2.6.2",
-    "typescript": "4.5.4"
+    "typescript": "^4.5.4"
   },
   "bin": {
     "XKS": "bin/core.js"
