--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "readline-sync": "1.4.10",
     "shelljs": "^0.7.8",
     "simple-git": "^2.43.0",
+    "typescript": "^4.5.5",
     "xks-git": "0.0.11"
   },
   "devDependencies": {
@@ -34,8 +35,7 @@
     "@types/node": "^17.0.8",
     "@types/readline-sync": "^1.4.4",
     "@types/shelljs": "^0.8.10",
-    "rimraf": "^2.6.2",
-    "typescript": "^4.5.4"
+    "rimraf": "^2.6.2"
   },
   "bin": {
     "XKS": "bin/core.js"
