--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "8.3.0",
-    "lodash": "4.17.21",
+    "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
     "readline-sync": "1.4.10",
     "shelljs": "^0.7.8",
     "simple-git": "^2.43.0",
@@ -32,6 +33,8 @@
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/commander": "^2.12.2",
+    "@types/fs-extra": "^9.0.13",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "@types/readline-sync": "^1.4.4",
     "@types/shelljs": "^0.8.10",
