--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "publish:minor": "npm version minor && npm publish",
     "dot": "NODE_ENV=node npx babel src/cli/create-snippet.js",
     "update-cli": "NODE_ENV=node npx babel scripts/bin/update-cli.js",
-    "test-cli": "NODE_ENV=node npx babel-node scripts/bin/test-cli.js"
+    "test-cli": "NODE_ENV=node npx babel-node scripts/bin/test-cli.js",
+    "test1": "node lib/xkca/test.js"
   },
   "author": "kunsam",
   "license": "MIT",
@@ -23,11 +24,12 @@
     "chalk": "^2.4.2",
     "commander": "8.3.0",
     "fs-extra": "^10.0.0",
+    "graphology": "^0.24.1",
     "lodash": "^4.17.21",
     "readline-sync": "1.4.10",
     "shelljs": "^0.7.8",
     "simple-git": "^2.43.0",
-    "typescript": "^4.5.5",
+    "typescript": "4.7.4",
     "xks-git": "0.0.11"
   },
   "devDependencies": {
@@ -38,6 +40,7 @@
     "@types/node": "^17.0.8",
     "@types/readline-sync": "^1.4.4",
     "@types/shelljs": "^0.8.10",
+    "graphology-types": "^0.24.1",
     "rimraf": "^2.6.2"
   },
   "bin": {
